<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home_section"
        android:checkable="false"
        android:title="@string/home">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/live_rates" />

                <item
                    android:id="@+id/nav_history"
                    android:icon="@drawable/ic_history"
                    android:title="@string/currency_charts" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/settings_section"
        android:checkable="false"
        android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/configure_updates" />
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_account"
                    android:title="@string/your_account" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/about_section"
        android:checkable="false"
        android:title="@string/about_us">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_contact"
                    android:icon="@drawable/ic_info"
                    android:title="@string/contact" />
            </group>
        </menu>
    </item>

</menu>
