<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_splash_screen">

    <fragment
        android:id="@+id/nav_home"
        android:name="ro.smg.exchangerates.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/nav_to_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/nav_to_history"
            app:destination="@id/nav_history" />
        <action
            android:id="@+id/nav_to_account"
            app:destination="@id/nav_account" />
    </fragment>

    <fragment
        android:id="@+id/nav_history"
        android:name="ro.smg.exchangerates.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ro.smg.exchangerates.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_login"
        android:name="ro.smg.exchangerates.ui.auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/nav_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_login"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/nav_splash_screen"
        android:name="ro.smg.exchangerates.ui.splashscreen.SplashScreenFragment"
        android:label="Splash Screen"
        tools:layout="@layout/fragment_splash_screen" >
        <action
            android:id="@+id/nav_to_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_splash_screen"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/nav_to_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_splash_screen"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_account"
        android:name="ro.smg.exchangerates.ui.account.AccountFragment"
        android:label="@string/your_account" >
        <action
            android:id="@+id/nav_to_login"
            app:destination="@id/nav_login"
            app:popUpTo="@id/nav_account"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/nav_contact"
        android:name="ro.smg.exchangerates.ui.about.ContactFragment"
        android:label="@string/contact"
        tools:layout="@layout/fragment_contact" />
</navigation>